<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TASK2_POE</string>
    <string name="all_items">All items</string>
    <string name="todo">TODO</string>
    <string name="boards">Boards</string>
    <string name="name">Name:</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="description">Description:</string>
    <string name="upload_image">Upload image:</string>
    <string name="cancel">cancel</string>
    <string name="write_a_short_description">Write a short description</string>

    <string name="item_name">Item name</string>
    <string name="welcome_to_collect_it">Welcome to Collect it!</string>

    <string name="first_name">first name</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="already_registered">Already registered?</string>
    <string name="goal_view">goal view</string>
    <string name="email_address">email address</string>
    <string name="save">Save</string>
    <string name="set_goal">Set goal</string>
    <string name="collection_goal">Collection goal:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="category">Category:</string>
    <string name="View" />


</resources>