<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Register_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:src="@drawable/collect"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_collect_it"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_Name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/ic_baseline_person"
            android:drawablePadding="10dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textSize="16sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_emailReg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/ic_baseline_person"
            android:drawablePadding="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textSize="16sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_PassReg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textSize="16sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_Confirm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textSize="16sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="24sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:layout_marginStart="-70dp"/>

        <Button
            android:id="@+id/btnLog"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="-60dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />
</LinearLayout>

</ScrollView>
