<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"


                android:scaleType="centerCrop"
                android:contentDescription="@string/todo" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".AddEditItems">

            <TextView
                android:id="@+id/txtiName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/name"
                android:textColor="#005555"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAddItem" />

            <TextView
                android:id="@+id/txtAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/bungee"
                android:text="@string/add_a_new_item"
                android:textColor="#EF6C00"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/description"
                android:textColor="#005555"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtiName" />

            <TextView
                android:id="@+id/txtImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="124dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/upload_image"
                android:textColor="#005555"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

            <EditText
                android:id="@+id/edtiNameItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="1dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/item_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/txtDesc"
                app:layout_constraintStart_toEndOf="@+id/txtiName" />

            <EditText
                android:layout_width="317dp"
                android:layout_height="116dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/write_a_short_description"
                android:inputType="textMultiLine"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/txtImg"
                app:layout_constraintEnd_toEndOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.222"
                app:layout_constraintStart_toStartOf="@+id/txtImg"
                app:layout_constraintTop_toBottomOf="@+id/txtDesc"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/imgUpload"
                android:layout_width="183dp"
                android:layout_height="136dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/upload_image"
                android:maxLength="25"
                android:onClick="chooseImage"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_insert_photo_24"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/txtImg"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="67dp"
                android:onClick="storeImage"
                android:text="save image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUpload"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnOk"
                app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="moveToShowActivity"
                android:text="Show Images"
                app:layout_constraintEnd_toEndOf="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="@+id/btnOk"
                app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>